# nightwatch

./: .gitignore  README.md  pyproject.toml
src/nightwatch/: __init__.py  app.py  cli.py  config.py  load.py  metrics.py  pipeline.py  plots.py  report.py
src/nightwatch/templates/: report.html
templates/: report.html
tests/: test_load.py  test_metrics.py  test_pipeline.py  test_plots.py  test_report.py  test_version.py
